--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,73 @@
+absl-py==0.7.1
+astor==0.7.1
+audioread==2.1.6
+certifi==2019.3.9
+Click==7.0
+cloudpickle==1.2.2
+cycler==0.10.0
+dask==2.9.1
+decorator==4.4.0
+distributed==2.9.1
+Django==2.2.1
+fastapi==0.45.0
+ffmpeg==1.4
 Flask==1.1.1
 fuzzywuzzy==0.17.0
+gast==0.2.2
+grpcio==1.19.0
+gunicorn==20.0.4
+h11==0.9.0
+h5py==2.9.0
+HeapDict==1.0.1
+itsdangerous==1.1.0
+Jinja2==2.10.3
+joblib==0.13.2
+Keras==2.2.4
+Keras-Applications==1.0.7
+Keras-Preprocessing==1.0.9
+kiwisolver==1.0.1
+librosa==0.6.3
+llvmlite==0.28.0
+Markdown==3.0.1
+MarkupSafe==1.1.1
+matplotlib==3.0.3
+mock==2.0.0
+modin==0.6.3
+msgpack==0.6.2
 numba==0.43.0
-numpy==1.16.2
-pandas==0.24.2
+numpy==1.18.0
+pandas==0.25.3
+pbr==5.1.3
 pipenv==2018.11.26
+protobuf==3.7.0
+psutil==5.6.7
+py==1.8.1
+pydantic==1.3
+pydub==0.23.1
+pyparsing==2.3.1
+python-dateutil==2.8.1
+python-speech-features==0.6
+pytz==2019.3
+PyYAML==5.1
+resampy==0.2.1
 scikit-learn==0.20.3
 scipy==1.2.1
+six==1.13.0
 sklearn==0.0
+sortedcontainers==2.1.0
 sqlparse==0.3.0
+starlette==0.12.9
+tblib==1.6.0
+tensorboard==1.13.1
+tensorflow==1.13.1
+tensorflow-estimator==1.13.0
+termcolor==1.1.0
+toolz==0.10.0
+tornado==6.0.3
+tqdm==4.31.1
 uvicorn==0.11.1
 virtualenv==16.5.0
 virtualenv-clone==0.5.3
-gunicorn==19.9.0
+websockets==8.1
+Werkzeug==0.15.1
+zict==1.0.0
